best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -52,7 +52,7 @@
 <ul>
 <li><a href="#orgf24ab64">5.1. MVC</a></li>
 <li><a href="#orgc171ad9">5.2. Lifecycle</a></li>
-<li><a href="#org8e3af1b">5.3. Action</a></li>
+<li><a href="#org582ac9d">5.3. Action</a></li>
 <li><a href="#org592c73d">5.4. Razor</a></li>
 <li><a href="#org946e302">5.5. Binding/Validation</a></li>
 <li><a href="#orgc3a6654">5.6. Filter</a></li>
@@ -63,7 +63,7 @@
 <li><a href="#orge8f9cc3">6.1. JSON</a></li>
 <li><a href="#org680ebb4">6.2. WebApiConfig.cs</a></li>
 <li><a href="#orgaf1b1de">6.3. Router</a></li>
-<li><a href="#org582ac9d">6.4. Action</a></li>
+<li><a href="#org03a61c6">6.4. Action</a></li>
 <li><a href="#orgb8b8cf9">6.5. Help</a></li>
 </ul>
 </li>
@@ -420,7 +420,7 @@ Global.asax:
 <h3 id="orgeca96eb"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="org31d6244">
+<figure id="org66ecfb8">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -610,7 +610,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="orgcd68dfb">
+<pre class="example" id="org4619a21">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -667,7 +667,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org1e3819b">
+<pre class="example" id="org44d70c4">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -994,7 +994,7 @@ ASP.NET MVC:
 <h3 id="orgc171ad9"><span class="section-number-3">5.2.</span> Lifecycle</h3>
 <div class="outline-text-3" id="text-5-2">
 
-<figure id="orgd13a7d7">
+<figure id="org9ee9ca0">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
@@ -1073,8 +1073,8 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 </div>
 </div>
 
-<div id="outline-container-org8e3af1b" class="outline-3">
-<h3 id="org8e3af1b"><span class="section-number-3">5.3.</span> Action</h3>
+<div id="outline-container-org582ac9d" class="outline-3">
+<h3 id="org582ac9d"><span class="section-number-3">5.3.</span> Action</h3>
 <div class="outline-text-3" id="text-5-3">
 <ul class="org-ul">
 <li>Action 是 Controller 里面用来处理请求产生响应的一个方法</li>
@@ -1312,8 +1312,8 @@ api/{controller}/{id}
 </div>
 </div>
 
-<div id="outline-container-org582ac9d" class="outline-3">
-<h3 id="org582ac9d"><span class="section-number-3">6.4.</span> Action</h3>
+<div id="outline-container-org03a61c6" class="outline-3">
+<h3 id="org03a61c6"><span class="section-number-3">6.4.</span> Action</h3>
 <div class="outline-text-3" id="text-6-4">
 <p>
 方法名字 vs 请求方法:
@@ -1393,6 +1393,10 @@ api/{controller}/{id}
 
 <p>
 可以通过 <code>https://localhost:23232/Help</code> 的方式进行访问。
+</p>
+
+<p>
+<a href="https://learn.microsoft.com/zh-cn/aspnet/web-api/overview/getting-started-with-aspnet-web-api/creating-api-help-pages">https://learn.microsoft.com/zh-cn/aspnet/web-api/overview/getting-started-with-aspnet-web-api/creating-api-help-pages</a>
 </p>
 </div>
 </div>
