--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-24 -->
+<!-- 2022-10-25 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ASP.NET</title>
@@ -22,49 +22,54 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2e46c72">1. 单机 到 CS 到 BS</a></li>
-<li><a href="#org43580bd">2. ASP -&gt; ASP.NET -&gt; ASP.NET Core</a></li>
-<li><a href="#orga16c0aa">3. ASP.NET (Framework)</a></li>
-<li><a href="#orge20d128">4. ASP.NET Webform</a>
+<li><a href="#org2f363e1">1. .Net</a>
 <ul>
-<li><a href="#org4884bcb">4.1. aspx 文件</a></li>
-<li><a href="#org845bf47">4.2. Page 类</a></li>
-<li><a href="#orgeca96eb">4.3. Page 的生命周期</a></li>
-<li><a href="#org7495188">4.4. Page 的内置对象</a></li>
-<li><a href="#org0fe4293">4.5. 常用控件</a>
-<ul>
-<li><a href="#orgd97114a">4.5.1. GridView</a></li>
-<li><a href="#orge1c7ab0">4.5.2. Repeater</a></li>
+<li><a href="#org4d2e173">1.1. 历史</a></li>
 </ul>
 </li>
-<li><a href="#org27e318c">4.6. 用户自定义控件</a></li>
-<li><a href="#orgf16bd8d">4.7. 其他</a>
+<li><a href="#org2e46c72">2. 单机 到 CS 到 BS</a></li>
+<li><a href="#org43580bd">3. ASP -&gt; ASP.NET -&gt; ASP.NET Core</a></li>
+<li><a href="#orga16c0aa">4. ASP.NET (Framework)</a></li>
+<li><a href="#orge20d128">5. ASP.NET Webform</a>
 <ul>
-<li><a href="#org3ed183e">4.7.1. 路由 (Route)</a></li>
-<li><a href="#orgbb2d469">4.7.2. 捆绑 (Bundle)</a></li>
-<li><a href="#org6449b61">4.7.3. 网站 Logo (favicon.ico)</a></li>
-<li><a href="#orgd80584e">4.7.4. IHttpHandler.IsReusable</a></li>
+<li><a href="#org4884bcb">5.1. aspx 文件</a></li>
+<li><a href="#org845bf47">5.2. Page 类</a></li>
+<li><a href="#orgeca96eb">5.3. Page 的生命周期</a></li>
+<li><a href="#org7495188">5.4. Page 的内置对象</a></li>
+<li><a href="#org0fe4293">5.5. 常用控件</a>
+<ul>
+<li><a href="#orgd97114a">5.5.1. GridView</a></li>
+<li><a href="#orge1c7ab0">5.5.2. Repeater</a></li>
+</ul>
+</li>
+<li><a href="#org27e318c">5.6. 用户自定义控件</a></li>
+<li><a href="#orgf16bd8d">5.7. 其他</a>
+<ul>
+<li><a href="#org3ed183e">5.7.1. 路由 (Route)</a></li>
+<li><a href="#orgbb2d469">5.7.2. 捆绑 (Bundle)</a></li>
+<li><a href="#org6449b61">5.7.3. 网站 Logo (favicon.ico)</a></li>
+<li><a href="#orgd80584e">5.7.4. IHttpHandler.IsReusable</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org1228952">5. ASP.NET MVC</a>
+<li><a href="#org1228952">6. ASP.NET MVC</a>
 <ul>
-<li><a href="#orgf24ab64">5.1. MVC</a></li>
-<li><a href="#orgc171ad9">5.2. Lifecycle</a></li>
-<li><a href="#org582ac9d">5.3. Action</a></li>
-<li><a href="#org592c73d">5.4. Razor</a></li>
-<li><a href="#org946e302">5.5. Binding/Validation</a></li>
-<li><a href="#orgc3a6654">5.6. Filter</a></li>
+<li><a href="#orgf24ab64">6.1. MVC</a></li>
+<li><a href="#orgc171ad9">6.2. Lifecycle</a></li>
+<li><a href="#org03a61c6">6.3. Action</a></li>
+<li><a href="#org592c73d">6.4. Razor</a></li>
+<li><a href="#org946e302">6.5. Binding/Validation</a></li>
+<li><a href="#orgc3a6654">6.6. Filter</a></li>
 </ul>
 </li>
-<li><a href="#org9b9ef2f">6. ASP.NET WebAPI</a>
+<li><a href="#org9b9ef2f">7. ASP.NET WebAPI</a>
 <ul>
-<li><a href="#orge8f9cc3">6.1. JSON</a></li>
-<li><a href="#org680ebb4">6.2. WebApiConfig.cs</a></li>
-<li><a href="#orgaf1b1de">6.3. Router</a></li>
-<li><a href="#org03a61c6">6.4. Action</a></li>
-<li><a href="#orgb8b8cf9">6.5. Help</a></li>
+<li><a href="#orge8f9cc3">7.1. JSON</a></li>
+<li><a href="#org680ebb4">7.2. WebApiConfig.cs</a></li>
+<li><a href="#orgaf1b1de">7.3. Router</a></li>
+<li><a href="#orgf464a9c">7.4. Action</a></li>
+<li><a href="#orgb8b8cf9">7.5. Help</a></li>
 </ul>
 </li>
 </ul>
@@ -72,9 +77,69 @@
 </nav>
 
 
-<section id="outline-container-org2e46c72" class="outline-2">
-<h2 id="org2e46c72"><span class="section-number-2">1.</span> 单机 到 CS 到 BS</h2>
+<section id="outline-container-org2f363e1" class="outline-2">
+<h2 id="org2f363e1"><span class="section-number-2">1.</span> .Net</h2>
 <div class="outline-text-2" id="text-1">
+</div>
+<div id="outline-container-org4d2e173" class="outline-3">
+<h3 id="org4d2e173"><span class="section-number-3">1.1.</span> 历史</h3>
+<div class="outline-text-3" id="text-1-1">
+<p>
+上世纪 90 年代末，Windows 上的开发技术分化成了多个部分:
+</p>
+<ul class="org-ul">
+<li>精通 C/C++ 程序员，他们喜欢直接面对 Windows API 进行编程</li>
+<li>有一部分人就转向了 MFC (Microsoft Foundation Class)</li>
+<li>COM 编程</li>
+</ul>
+
+<p>
+上述技术都存在一些问题或短板。为了应对 Internet 潮流的到来，微软决定推出新一代的技术框架。
+2002 年的时候，.NET 平台就出现了。刚开始主要使用 VB，后面全面转向了 C#。
+</p>
+
+<p>
+发展至今，.NET 平台现在主要分为 3 部分：
+</p>
+<ul class="org-ul">
+<li>.NET Framework
+<ul class="org-ul">
+<li>微软把控</li>
+<li>只能运行在 Windows 平台上面</li>
+<li>最新的版本 (2022-10-25) 是 4.8</li>
+<li>是内置在 Windows 操作系统下的平台</li>
+</ul></li>
+<li>Mono
+<ul class="org-ul">
+<li>由 Ximian 公司主持创建的开源项目，2004 年推出第一个版本</li>
+<li>目标是创建一个跨平台的 .NET 实现</li>
+<li>Unity3D 是基于 Mono</li>
+<li>Xamarin 框架也是基于 Mono</li>
+</ul></li>
+<li>.NET Core
+<ul class="org-ul">
+<li>2016 年，微软决定将 .NET 平台开源并且跨平台。这时候将 Mono 收购了</li>
+<li>微软决定，留两个跨平台的运行时 (Mono + .Net Core)，Core 是从头实现的</li>
+<li>Core:
+<ul class="org-ul">
+<li>将 MVC 和 Web API 移植到了 Core 中，但是 Webform 和 WCF 等被移除了</li>
+<li>Entity Framework 多年以来背负了沉重的历史包袱，因此 Core 中将其精简了，并且加入了对非关系型数据库的之处</li>
+<li>微软将很多 .NET 中自带的功能抽取剥离出来放到了 NuGet 包里。这样 .NET 的核心就变得更小，而且没有太多的依赖</li>
+<li>使用 Windows Desktop pack 的方法运行 Winform/WPF 等，从而可以让 Windows 上面支持更多未移植的功能</li>
+</ul></li>
+<li>2020.11，微软决定，将原本要推出的 .NET Core 3.1 改名为 .NET5，并承诺，
+未来只有一个 .NET 平台，每年将会推出一个新的版本</li>
+</ul></li>
+</ul>
+</div>
+</div>
+</section>
+
+
+
+<section id="outline-container-org2e46c72" class="outline-2">
+<h2 id="org2e46c72"><span class="section-number-2">2.</span> 单机 到 CS 到 BS</h2>
+<div class="outline-text-2" id="text-2">
 <p>
 要注意，.NET 跟 C# 不是一样的概念：
 </p>
@@ -149,8 +214,8 @@ scala
 
 
 <section id="outline-container-org43580bd" class="outline-2">
-<h2 id="org43580bd"><span class="section-number-2">2.</span> ASP -&gt; ASP.NET -&gt; ASP.NET Core</h2>
-<div class="outline-text-2" id="text-2">
+<h2 id="org43580bd"><span class="section-number-2">3.</span> ASP -&gt; ASP.NET -&gt; ASP.NET Core</h2>
+<div class="outline-text-2" id="text-3">
 <p>
 大致分为三个阶段:
 </p>
@@ -163,8 +228,8 @@ scala
 </section>
 
 <section id="outline-container-orga16c0aa" class="outline-2">
-<h2 id="orga16c0aa"><span class="section-number-2">3.</span> ASP.NET (Framework)</h2>
-<div class="outline-text-2" id="text-3">
+<h2 id="orga16c0aa"><span class="section-number-2">4.</span> ASP.NET (Framework)</h2>
+<div class="outline-text-2" id="text-4">
 <p>
 Pipeline (管道/管线) 模型:
 </p>
@@ -206,12 +271,12 @@ Global.asax:
 
 
 <section id="outline-container-orge20d128" class="outline-2">
-<h2 id="orge20d128"><span class="section-number-2">4.</span> ASP.NET Webform</h2>
-<div class="outline-text-2" id="text-4">
+<h2 id="orge20d128"><span class="section-number-2">5.</span> ASP.NET Webform</h2>
+<div class="outline-text-2" id="text-5">
 </div>
 <div id="outline-container-org4884bcb" class="outline-3">
-<h3 id="org4884bcb"><span class="section-number-3">4.1.</span> aspx 文件</h3>
-<div class="outline-text-3" id="text-4-1">
+<h3 id="org4884bcb"><span class="section-number-3">5.1.</span> aspx 文件</h3>
+<div class="outline-text-3" id="text-5-1">
 <p>
 首先，可以将 aspx 文件看做一个加强版的 html 文件，所以，它完全接受 html 语法。
 </p>
@@ -399,8 +464,8 @@ Global.asax:
 </div>
 
 <div id="outline-container-org845bf47" class="outline-3">
-<h3 id="org845bf47"><span class="section-number-3">4.2.</span> Page 类</h3>
-<div class="outline-text-3" id="text-4-2">
+<h3 id="org845bf47"><span class="section-number-3">5.2.</span> Page 类</h3>
+<div class="outline-text-3" id="text-5-2">
 <p>
 你 (Browser) 请求 <a href="http://localhost:893232/Hello.aspx">http://localhost:893232/Hello.aspx</a> 到我 (IIS):
 </p>
@@ -417,10 +482,10 @@ Global.asax:
 </div>
 
 <div id="outline-container-orgeca96eb" class="outline-3">
-<h3 id="orgeca96eb"><span class="section-number-3">4.3.</span> Page 的生命周期</h3>
-<div class="outline-text-3" id="text-4-3">
+<h3 id="orgeca96eb"><span class="section-number-3">5.3.</span> Page 的生命周期</h3>
+<div class="outline-text-3" id="text-5-3">
 
-<figure id="org66ecfb8">
+<figure id="orgf507d3f">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -576,8 +641,8 @@ Unload:
 </div>
 
 <div id="outline-container-org7495188" class="outline-3">
-<h3 id="org7495188"><span class="section-number-3">4.4.</span> Page 的内置对象</h3>
-<div class="outline-text-3" id="text-4-4">
+<h3 id="org7495188"><span class="section-number-3">5.4.</span> Page 的内置对象</h3>
+<div class="outline-text-3" id="text-5-4">
 <p>
 所谓的内置对象，是指在 Page 类中被初始化，从而在 aspx 中能直接使用的对象。
 </p>
@@ -610,7 +675,7 @@ Unload:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org4619a21">
+<pre class="example" id="org6902ddb">
 ----------------------    -------
 | .                  |    | 验证 |
 ----------------------    -------
@@ -667,7 +732,7 @@ Code Action Task:
 <p>
 Code Action Task:
 </p>
-<pre class="example" id="org44d70c4">
+<pre class="example" id="org78cc0bb">
 在页面中，显示:
 : 这是本页面在 Page 生命中，被访问的第 N 次。
 
@@ -728,12 +793,12 @@ Code Action Task:
 </div>
 
 <div id="outline-container-org0fe4293" class="outline-3">
-<h3 id="org0fe4293"><span class="section-number-3">4.5.</span> 常用控件</h3>
-<div class="outline-text-3" id="text-4-5">
+<h3 id="org0fe4293"><span class="section-number-3">5.5.</span> 常用控件</h3>
+<div class="outline-text-3" id="text-5-5">
 </div>
 <div id="outline-container-orgd97114a" class="outline-4">
-<h4 id="orgd97114a"><span class="section-number-4">4.5.1.</span> GridView</h4>
-<div class="outline-text-4" id="text-4-5-1">
+<h4 id="orgd97114a"><span class="section-number-4">5.5.1.</span> GridView</h4>
+<div class="outline-text-4" id="text-5-5-1">
 <p>
 <a href="https://learn.microsoft.com/zh-cn/dotnet/api/system.web.ui.webcontrols.gridview?view=netframework-4.8">https://learn.microsoft.com/zh-cn/dotnet/api/system.web.ui.webcontrols.gridview?view=netframework-4.8</a>
 </p>
@@ -798,8 +863,8 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 
 <div id="outline-container-orge1c7ab0" class="outline-4">
-<h4 id="orge1c7ab0"><span class="section-number-4">4.5.2.</span> Repeater</h4>
-<div class="outline-text-4" id="text-4-5-2">
+<h4 id="orge1c7ab0"><span class="section-number-4">5.5.2.</span> Repeater</h4>
+<div class="outline-text-4" id="text-5-5-2">
 <p>
 专门进行数据迭代的一个控件，可以生成更高效更优雅的代码。
 </p>
@@ -836,8 +901,8 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 
 <div id="outline-container-org27e318c" class="outline-3">
-<h3 id="org27e318c"><span class="section-number-3">4.6.</span> 用户自定义控件</h3>
-<div class="outline-text-3" id="text-4-6">
+<h3 id="org27e318c"><span class="section-number-3">5.6.</span> 用户自定义控件</h3>
+<div class="outline-text-3" id="text-5-6">
 <p>
 控件的主要目的，是复用。使用控件跟调用方法很类似，只不过方法的核心是逻辑，控件的核心是视图。
 </p>
@@ -887,12 +952,12 @@ studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000
 </div>
 
 <div id="outline-container-orgf16bd8d" class="outline-3">
-<h3 id="orgf16bd8d"><span class="section-number-3">4.7.</span> 其他</h3>
-<div class="outline-text-3" id="text-4-7">
+<h3 id="orgf16bd8d"><span class="section-number-3">5.7.</span> 其他</h3>
+<div class="outline-text-3" id="text-5-7">
 </div>
 <div id="outline-container-org3ed183e" class="outline-4">
-<h4 id="org3ed183e"><span class="section-number-4">4.7.1.</span> 路由 (Route)</h4>
-<div class="outline-text-4" id="text-4-7-1">
+<h4 id="org3ed183e"><span class="section-number-4">5.7.1.</span> 路由 (Route)</h4>
+<div class="outline-text-4" id="text-5-7-1">
 <div class="org-src-container">
 <pre class="src src-csharp">RouteTable.Routes.<span style="color: #721045;">MapPageRoute</span><span style="color: #000000;">(</span><span style="color: #2544bb;">"hello"</span>, <span style="color: #2544bb;">"hello"</span>, <span style="color: #2544bb;">"~/Students1.aspx"</span><span style="color: #000000;">)</span>;
 RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span style="color: #000000;">(</span>
@@ -907,8 +972,8 @@ RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span s
 </div>
 
 <div id="outline-container-orgbb2d469" class="outline-4">
-<h4 id="orgbb2d469"><span class="section-number-4">4.7.2.</span> 捆绑 (Bundle)</h4>
-<div class="outline-text-4" id="text-4-7-2">
+<h4 id="orgbb2d469"><span class="section-number-4">5.7.2.</span> 捆绑 (Bundle)</h4>
+<div class="outline-text-4" id="text-5-7-2">
 <pre class="example">
 让 css/js (1) 变少 (2) 变小
 </pre>
@@ -940,8 +1005,8 @@ RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span s
 </div>
 
 <div id="outline-container-org6449b61" class="outline-4">
-<h4 id="org6449b61"><span class="section-number-4">4.7.3.</span> 网站 Logo (favicon.ico)</h4>
-<div class="outline-text-4" id="text-4-7-3">
+<h4 id="org6449b61"><span class="section-number-4">5.7.3.</span> 网站 Logo (favicon.ico)</h4>
+<div class="outline-text-4" id="text-5-7-3">
 <p>
 放在网站的根目录。
 </p>
@@ -949,8 +1014,8 @@ RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span s
 </div>
 
 <div id="outline-container-orgd80584e" class="outline-4">
-<h4 id="orgd80584e"><span class="section-number-4">4.7.4.</span> IHttpHandler.IsReusable</h4>
-<div class="outline-text-4" id="text-4-7-4">
+<h4 id="orgd80584e"><span class="section-number-4">5.7.4.</span> IHttpHandler.IsReusable</h4>
+<div class="outline-text-4" id="text-5-7-4">
 <p>
 重用。
 </p>
@@ -960,12 +1025,12 @@ RouteTable.Routes.<span style="color: #721045;">EnableFriendlyUrls</span><span s
 </section>
 
 <section id="outline-container-org1228952" class="outline-2">
-<h2 id="org1228952"><span class="section-number-2">5.</span> ASP.NET MVC</h2>
-<div class="outline-text-2" id="text-5">
+<h2 id="org1228952"><span class="section-number-2">6.</span> ASP.NET MVC</h2>
+<div class="outline-text-2" id="text-6">
 </div>
 <div id="outline-container-orgf24ab64" class="outline-3">
-<h3 id="orgf24ab64"><span class="section-number-3">5.1.</span> MVC</h3>
-<div class="outline-text-3" id="text-5-1">
+<h3 id="orgf24ab64"><span class="section-number-3">6.1.</span> MVC</h3>
+<div class="outline-text-3" id="text-6-1">
 <p>
 ASP.NET MVC:
 </p>
@@ -991,10 +1056,10 @@ ASP.NET MVC:
 </div>
 
 <div id="outline-container-orgc171ad9" class="outline-3">
-<h3 id="orgc171ad9"><span class="section-number-3">5.2.</span> Lifecycle</h3>
-<div class="outline-text-3" id="text-5-2">
+<h3 id="orgc171ad9"><span class="section-number-3">6.2.</span> Lifecycle</h3>
+<div class="outline-text-3" id="text-6-2">
 
-<figure id="org9ee9ca0">
+<figure id="org276e2be">
 <img src="img/mvc-lifecycle.png" alt="mvc-lifecycle.png">
 
 </figure>
@@ -1073,9 +1138,9 @@ controller.<span style="color: #721045;">Execute</span><span style="color: #0000
 </div>
 </div>
 
-<div id="outline-container-org582ac9d" class="outline-3">
-<h3 id="org582ac9d"><span class="section-number-3">5.3.</span> Action</h3>
-<div class="outline-text-3" id="text-5-3">
+<div id="outline-container-org03a61c6" class="outline-3">
+<h3 id="org03a61c6"><span class="section-number-3">6.3.</span> Action</h3>
+<div class="outline-text-3" id="text-6-3">
 <ul class="org-ul">
 <li>Action 是 Controller 里面用来处理请求产生响应的一个方法</li>
 <li>返回值是一个普通的 string/int 等或者是一个 ActionResult</li>
@@ -1105,8 +1170,8 @@ ActionResult:
 </div>
 
 <div id="outline-container-org592c73d" class="outline-3">
-<h3 id="org592c73d"><span class="section-number-3">5.4.</span> Razor</h3>
-<div class="outline-text-3" id="text-5-4">
+<h3 id="org592c73d"><span class="section-number-3">6.4.</span> Razor</h3>
+<div class="outline-text-3" id="text-6-4">
 <ul class="org-ul">
 <li>Html 代码跟 CSharp 代码混编</li>
 <li>分解符: 遇到 @ 就是 csharp, 遇到 &lt; 就是 html 代码</li>
@@ -1118,8 +1183,8 @@ ActionResult:
 </div>
 
 <div id="outline-container-org946e302" class="outline-3">
-<h3 id="org946e302"><span class="section-number-3">5.5.</span> Binding/Validation</h3>
-<div class="outline-text-3" id="text-5-5">
+<h3 id="org946e302"><span class="section-number-3">6.5.</span> Binding/Validation</h3>
+<div class="outline-text-3" id="text-6-5">
 <ul class="org-ul">
 <li>参数是自动绑定的，注意 [Bind] 的使用</li>
 <li>验证，推荐使用的是 Model 验证方式:
@@ -1167,8 +1232,8 @@ ActionResult:
 </div>
 
 <div id="outline-container-orgc3a6654" class="outline-3">
-<h3 id="orgc3a6654"><span class="section-number-3">5.6.</span> Filter</h3>
-<div class="outline-text-3" id="text-5-6">
+<h3 id="orgc3a6654"><span class="section-number-3">6.6.</span> Filter</h3>
+<div class="outline-text-3" id="text-6-6">
 <p>
 接口、方法:
 </p>
@@ -1183,12 +1248,12 @@ ActionResult:
 </section>
 
 <section id="outline-container-org9b9ef2f" class="outline-2">
-<h2 id="org9b9ef2f"><span class="section-number-2">6.</span> ASP.NET WebAPI</h2>
-<div class="outline-text-2" id="text-6">
+<h2 id="org9b9ef2f"><span class="section-number-2">7.</span> ASP.NET WebAPI</h2>
+<div class="outline-text-2" id="text-7">
 </div>
 <div id="outline-container-orge8f9cc3" class="outline-3">
-<h3 id="orge8f9cc3"><span class="section-number-3">6.1.</span> JSON</h3>
-<div class="outline-text-3" id="text-6-1">
+<h3 id="orge8f9cc3"><span class="section-number-3">7.1.</span> JSON</h3>
+<div class="outline-text-3" id="text-7-1">
 <p>
 JavaScript Object Notation.
 </p>
@@ -1256,8 +1321,8 @@ s2.<span style="color: #721045;">Add</span><span style="color: #000000;">(</span
 </div>
 
 <div id="outline-container-org680ebb4" class="outline-3">
-<h3 id="org680ebb4"><span class="section-number-3">6.2.</span> WebApiConfig.cs</h3>
-<div class="outline-text-3" id="text-6-2">
+<h3 id="org680ebb4"><span class="section-number-3">7.2.</span> WebApiConfig.cs</h3>
+<div class="outline-text-3" id="text-7-2">
 <p>
 可以在这里配置 WebAPI 相关的选项。
 </p>
@@ -1290,8 +1355,8 @@ config.Formatters.<span style="color: #721045;">Add</span><span style="color: #0
 </div>
 
 <div id="outline-container-orgaf1b1de" class="outline-3">
-<h3 id="orgaf1b1de"><span class="section-number-3">6.3.</span> Router</h3>
-<div class="outline-text-3" id="text-6-3">
+<h3 id="orgaf1b1de"><span class="section-number-3">7.3.</span> Router</h3>
+<div class="outline-text-3" id="text-7-3">
 <p>
 默认的路由规则是在 WebApiConfig.cs 中定义的:
 </p>
@@ -1312,9 +1377,9 @@ api/{controller}/{id}
 </div>
 </div>
 
-<div id="outline-container-org03a61c6" class="outline-3">
-<h3 id="org03a61c6"><span class="section-number-3">6.4.</span> Action</h3>
-<div class="outline-text-3" id="text-6-4">
+<div id="outline-container-orgf464a9c" class="outline-3">
+<h3 id="orgf464a9c"><span class="section-number-3">7.4.</span> Action</h3>
+<div class="outline-text-3" id="text-7-4">
 <p>
 方法名字 vs 请求方法:
 </p>
@@ -1385,8 +1450,8 @@ api/{controller}/{id}
 </div>
 
 <div id="outline-container-orgb8b8cf9" class="outline-3">
-<h3 id="orgb8b8cf9"><span class="section-number-3">6.5.</span> Help</h3>
-<div class="outline-text-3" id="text-6-5">
+<h3 id="orgb8b8cf9"><span class="section-number-3">7.5.</span> Help</h3>
+<div class="outline-text-3" id="text-7-5">
 <p>
 在 Areas 下面存在一个 HelpPage 的域，里面实现了展示当前所有 API 文档的功能。
 </p>
@@ -1404,7 +1469,7 @@ api/{controller}/{id}
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-10-24</p>
+<p class="date">Created: 2022-10-25</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
